can-socket/tests/compile-fail/extended_id_negative.rs
fn main() {
	let _id = can_socket::extended_id!(-2);
}
