can-socket/tests/compile-fail/extended_id_negative.stderr
error[E0277]: the trait bound `u32: Neg` is not satisfied
 --> tests/compile-fail/extended_id_negative.rs:2:37
  |
2 |     let _id = can_socket::extended_id!(-2);
  |                                        ^^ the trait `Neg` is not implemented for `u32`
  |
  = help: the following other types implement trait `Neg`:
            &f128
            &f16
            &f32
            &f64
            &i128
            &i16
            &i32
            &i64
          and $N others

error[E0600]: cannot apply unary operator `-` to type `u32`
 --> tests/compile-fail/extended_id_negative.rs:2:37
  |
2 |     let _id = can_socket::extended_id!(-2);
  |                                        ^^ cannot apply unary operator `-`
  |
  = note: unsigned values cannot be negated
